app2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-b
spec:
  selector:
    app: app-b
  ports:
    - port: 80
      targetPort: 4000
